CM01_08/src/objects/Status_Indicator_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Accomplishments_This_Period__c</fullName>
        <label>Accomplishments This Period</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_to_be_taken__c</fullName>
        <label>Action to be taken</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <formula>IMAGE( 
CASE(Project_Budget__c, 
&quot;Green&quot;, &quot;/resource/capicons/green.jpg&quot;, 
&quot;Yellow&quot;, &quot;/resource/capicons/yellow.jpg&quot;, 
&quot;Red&quot;, &quot;/resource/capicons/red.jpg&quot;, 
&quot;/resource/capicons/gray.jpg&quot;), &quot;status color&quot;
)</formula>
        <label>Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control__c</fullName>
        <label>Control</label>
        <picklist>
            <picklistValues>
                <fullName>Under control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahead of schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stabilizing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cust_Oblig__c</fullName>
        <formula>IMAGE( 
CASE( Customer_Obligations__c , 
&quot;Green&quot;, &quot;/resource/capicons/green.jpg&quot;, 
&quot;Yellow&quot;, &quot;/resource/capicons/yellow.jpg&quot;, 
&quot;Red&quot;, &quot;/resource/capicons/red.jpg&quot;, 
&quot;/resource/capicons/gray.jpg&quot;), &quot;status color&quot; 
)</formula>
        <label>Cust Oblig</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Sat__c</fullName>
        <formula>IMAGE( 
CASE(  Customer_Satisfaction__c  , 
&quot;Green&quot;, &quot;/resource/capicons/green.jpg&quot;, 
&quot;Yellow&quot;, &quot;/resource/capicons/yellow.jpg&quot;, 
&quot;Red&quot;, &quot;/resource/capicons/red.jpg&quot;, 
&quot;/resource/capicons/gray.jpg&quot;), &quot;status color&quot; 
)</formula>
        <label>Cust Sat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Obligations__c</fullName>
        <label>Customer Obligations</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <label>Customer Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Emp_Sat__c</fullName>
        <formula>IMAGE( 
CASE(  Employee_Satisfaction__c  , 
&quot;Green&quot;, &quot;/resource/capicons/green.jpg&quot;, 
&quot;Yellow&quot;, &quot;/resource/capicons/yellow.jpg&quot;, 
&quot;Red&quot;, &quot;/resource/capicons/red.jpg&quot;, 
&quot;/resource/capicons/gray.jpg&quot;), &quot;status color&quot; 
)</formula>
        <label>Emp Sat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Satisfaction__c</fullName>
        <label>Employee Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exec_Engage__c</fullName>
        <formula>IMAGE( 
CASE(  Executive_Engagement__c  , 
&quot;Green&quot;, &quot;/resource/capicons/green.jpg&quot;, 
&quot;Yellow&quot;, &quot;/resource/capicons/yellow.jpg&quot;, 
&quot;Red&quot;, &quot;/resource/capicons/red.jpg&quot;, 
&quot;/resource/capicons/gray.jpg&quot;), &quot;status color&quot; 
)</formula>
        <label>Exec Engage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Engagement__c</fullName>
        <label>Executive Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Go_Live__c</fullName>
        <label>Go Live</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gov__c</fullName>
        <formula>IMAGE( 
CASE(  Governance__c  , 
&quot;Green&quot;, &quot;/resource/capicons/green.jpg&quot;, 
&quot;Yellow&quot;, &quot;/resource/capicons/yellow.jpg&quot;, 
&quot;Red&quot;, &quot;/resource/capicons/red.jpg&quot;, 
&quot;/resource/capicons/gray.jpg&quot;), &quot;status color&quot; 
)</formula>
        <label>Gov</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governance__c</fullName>
        <label>Governance</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Items_for_Management_Attn__c</fullName>
        <label>Items for Management Attn</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PDF_Link__c</fullName>
        <description>PDFのリンク先</description>
        <formula>HYPERLINK(&quot;../apex/Milestone_BI_MatrixReport?Id=&quot;+ Id , &quot;PDF&quot;)</formula>
        <label>PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_But_Not_Accomplished__c</fullName>
        <label>Planned But Not Accomplished</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_For_The_Next_Period__c</fullName>
        <label>Planned For The Next Period</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Budget__c</fullName>
        <label>Project Budget</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Close_Date__c</fullName>
        <label>Project Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <label>Project Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Prepare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Schedule__c</fullName>
        <label>Project Schedule</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Scope__c</fullName>
        <label>Project Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipName>Status_Indicator</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_on_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project on Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <formula>IMAGE( 
CASE(  Project_Schedule__c  , 
&quot;Green&quot;, &quot;/resource/capicons/green.jpg&quot;, 
&quot;Yellow&quot;, &quot;/resource/capicons/yellow.jpg&quot;, 
&quot;Red&quot;, &quot;/resource/capicons/red.jpg&quot;, 
&quot;/resource/capicons/gray.jpg&quot;), &quot;status color&quot; 
)</formula>
        <label>Schedule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <formula>IMAGE( 
CASE(  Project_Scope__c  , 
&quot;Green&quot;, &quot;/resource/capicons/green.jpg&quot;, 
&quot;Yellow&quot;, &quot;/resource/capicons/yellow.jpg&quot;, 
&quot;Red&quot;, &quot;/resource/capicons/red.jpg&quot;, 
&quot;/resource/capicons/gray.jpg&quot;), &quot;status color&quot; 
)</formula>
        <label>Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <label>Status Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary_Project_Status__c</fullName>
        <label>Summary - Project Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>プロジェクト指標</label>
    <nameField>
        <label>Status Indicator Name</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>testRecordType</fullName>
        <active>true</active>
        <label>testRecordType</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>